--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hola Mundo</h1>
+
+    <img src="foto1.jpg" alt="" height="300" width="250">
+
+    <h1>Paola Daniela</h1>
+    <h2>Carreño Martínez</h2>
+    <p>Hola,soy diseñadora de la comunicación gráfica,me gusta mucho todo lo relacionado
+    las artes,cine,música, teatro, danza, etc. Práctico danza árabe y tengo gran interés en la cultura
+    de Medio Oriente. Me gusta la naturaleza y los animales. </p>
+  <!--esto es un comentario emmet comand ctrl shift 7-->
+    <p>Mis películas favoritas son</p>
+
+    <ul>
+      <li>La vida es bella</li>
+      <li>El señor de los anillos</li>
+      <li>El extraño mundo de Jack</li>
+
+    </ul>
+    <p>Mis Hobbies:</p>
+    <ol>
+      <li>Bailar</li>
+      <li>Viajar</li>
+      <li>Leer</li>
+    </ol>
+<!--links a cosas que nos gusten  -->
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/VV5oVYVGfNc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+      <a href="https://www.facebook.com/">Clikeame!</a>
+
   </body>
 </html>
+
+<!--TAREA TARJETA DE PRESENTACION  -->
